lensParser.py
# Generated from lens.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lensParser ( Parser ):

    grammarFileName = "lens.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@start'", "'@end'", "'op'", "'('", "':'", 
                     "','", "')'", "'->'", "'{'", "'return'", "'}'", "'print'", 
                     "'input'", "'func'", "'if'", "'elseif'", "'else'", 
                     "'for'", "'in'", "'..'", "'while'", "'*'", "'/'", "'+'", 
                     "'-'", "'&&'", "'||'", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'int'", "'bool'", "'String'", "'float'", 
                     "'='", "'['", "']'", "'let'", "'obj'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'::'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "INT", "FLOAT", "VAR", "TIPO", "DUPONT", 
                      "BOOL", "ANY", "COMENTARIO", "WS" ]

    RULE_lens = 0
    RULE_comando = 1
    RULE_opper = 2
    RULE_expop = 3
    RULE_imprime = 4
    RULE_concat = 5
    RULE_ler = 6
    RULE_funcaoW = 7
    RULE_parametros = 8
    RULE_funcaoD = 9
    RULE_condicao = 10
    RULE_ifcond = 11
    RULE_elifcond = 12
    RULE_elcond = 13
    RULE_lacofor = 14
    RULE_lacowhile = 15
    RULE_arit = 16
    RULE_aritp = 17
    RULE_oparit = 18
    RULE_opalogi = 19
    RULE_comparacao = 20
    RULE_expcomp = 21
    RULE_explogi = 22
    RULE_expTemplate = 23
    RULE_exp = 24
    RULE_expcond = 25
    RULE_dec = 26
    RULE_tipo = 27
    RULE_atray = 28
    RULE_arraysdec = 29
    RULE_letvar = 30
    RULE_arraysolto = 31
    RULE_setarray = 32
    RULE_atrsolta = 33
    RULE_atr = 34
    RULE_rolav = 35
    RULE_valor = 36
    RULE_objeto = 37
    RULE_decobj = 38
    RULE_atrobj = 39
    RULE_obj = 40
    RULE_membro = 41

    ruleNames =  [ "lens", "comando", "opper", "expop", "imprime", "concat", 
                   "ler", "funcaoW", "parametros", "funcaoD", "condicao", 
                   "ifcond", "elifcond", "elcond", "lacofor", "lacowhile", 
                   "arit", "aritp", "oparit", "opalogi", "comparacao", "expcomp", 
                   "explogi", "expTemplate", "exp", "expcond", "dec", "tipo", 
                   "atray", "arraysdec", "letvar", "arraysolto", "setarray", 
                   "atrsolta", "atr", "rolav", "valor", "objeto", "decobj", 
                   "atrobj", "obj", "membro" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    STRING=44
    INT=45
    FLOAT=46
    VAR=47
    TIPO=48
    DUPONT=49
    BOOL=50
    ANY=51
    COMENTARIO=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LensContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ComandoContext)
            else:
                return self.getTypedRuleContext(lensParser.ComandoContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_lens

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLens" ):
                listener.enterLens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLens" ):
                listener.exitLens(self)




    def lens(self):

        localctx = lensParser.LensContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_lens)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(lensParser.T__0)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147334560542728) != 0):
                self.state = 85
                self.comando()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(lensParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def imprime(self):
            return self.getTypedRuleContext(lensParser.ImprimeContext,0)


        def atrsolta(self):
            return self.getTypedRuleContext(lensParser.AtrsoltaContext,0)


        def dec(self):
            return self.getTypedRuleContext(lensParser.DecContext,0)


        def ler(self):
            return self.getTypedRuleContext(lensParser.LerContext,0)


        def condicao(self):
            return self.getTypedRuleContext(lensParser.CondicaoContext,0)


        def lacofor(self):
            return self.getTypedRuleContext(lensParser.LacoforContext,0)


        def lacowhile(self):
            return self.getTypedRuleContext(lensParser.LacowhileContext,0)


        def funcaoW(self):
            return self.getTypedRuleContext(lensParser.FuncaoWContext,0)


        def funcaoD(self):
            return self.getTypedRuleContext(lensParser.FuncaoDContext,0)


        def opper(self):
            return self.getTypedRuleContext(lensParser.OpperContext,0)


        def arraysdec(self):
            return self.getTypedRuleContext(lensParser.ArraysdecContext,0)


        def setarray(self):
            return self.getTypedRuleContext(lensParser.SetarrayContext,0)


        def objeto(self):
            return self.getTypedRuleContext(lensParser.ObjetoContext,0)


        def atrobj(self):
            return self.getTypedRuleContext(lensParser.AtrobjContext,0)


        def getRuleIndex(self):
            return lensParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = lensParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.imprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.atrsolta()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.dec()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.ler()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.condicao()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.lacofor()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.lacowhile()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 100
                self.funcaoW()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 101
                self.funcaoD()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 102
                self.opper()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 103
                self.arraysdec()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 104
                self.setarray()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 105
                self.objeto()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 106
                self.atrobj()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANY(self):
            return self.getToken(lensParser.ANY, 0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(lensParser.VAR)
            else:
                return self.getToken(lensParser.VAR, i)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.TipoContext)
            else:
                return self.getTypedRuleContext(lensParser.TipoContext,i)


        def exp(self):
            return self.getTypedRuleContext(lensParser.ExpContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ComandoContext)
            else:
                return self.getTypedRuleContext(lensParser.ComandoContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_opper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpper" ):
                listener.enterOpper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpper" ):
                listener.exitOpper(self)




    def opper(self):

        localctx = lensParser.OpperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_opper)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(lensParser.T__2)
            self.state = 110
            self.match(lensParser.ANY)
            self.state = 111
            self.match(lensParser.T__3)
            self.state = 112
            self.match(lensParser.VAR)
            self.state = 113
            self.match(lensParser.T__4)
            self.state = 114
            self.tipo()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 115
                self.match(lensParser.T__5)
                self.state = 116
                self.match(lensParser.VAR)
                self.state = 117
                self.match(lensParser.T__4)
                self.state = 118
                self.tipo()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(lensParser.T__6)
            self.state = 125
            self.match(lensParser.T__7)
            self.state = 126
            self.tipo()
            self.state = 127
            self.match(lensParser.T__8)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147334560542728) != 0):
                self.state = 128
                self.comando()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(lensParser.T__9)
            self.state = 135
            self.exp()
            self.state = 136
            self.match(lensParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expTemplate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ExpTemplateContext)
            else:
                return self.getTypedRuleContext(lensParser.ExpTemplateContext,i)


        def ANY(self, i:int=None):
            if i is None:
                return self.getTokens(lensParser.ANY)
            else:
                return self.getToken(lensParser.ANY, i)

        def getRuleIndex(self):
            return lensParser.RULE_expop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpop" ):
                listener.enterExpop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpop" ):
                listener.exitExpop(self)




    def expop(self):

        localctx = lensParser.ExpopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.expTemplate()
            self.state = 141 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.match(lensParser.ANY)
                self.state = 140
                self.expTemplate()
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==51):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DUPONT(self):
            return self.getToken(lensParser.DUPONT, 0)

        def concat(self):
            return self.getTypedRuleContext(lensParser.ConcatContext,0)


        def getRuleIndex(self):
            return lensParser.RULE_imprime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprime" ):
                listener.enterImprime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprime" ):
                listener.exitImprime(self)




    def imprime(self):

        localctx = lensParser.ImprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_imprime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(lensParser.T__11)
            self.state = 146
            self.match(lensParser.DUPONT)
            self.state = 147
            self.concat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConcatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rolav(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.RolavContext)
            else:
                return self.getTypedRuleContext(lensParser.RolavContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_concat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcat" ):
                listener.enterConcat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcat" ):
                listener.exitConcat(self)




    def concat(self):

        localctx = lensParser.ConcatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_concat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.rolav()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 150
                self.match(lensParser.T__5)
                self.state = 151
                self.rolav()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(lensParser.VAR, 0)

        def getRuleIndex(self):
            return lensParser.RULE_ler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLer" ):
                listener.enterLer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLer" ):
                listener.exitLer(self)




    def ler(self):

        localctx = lensParser.LerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(lensParser.T__12)
            self.state = 158
            self.match(lensParser.T__3)
            self.state = 159
            self.match(lensParser.VAR)
            self.state = 160
            self.match(lensParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoWContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(lensParser.VAR, 0)

        def tipo(self):
            return self.getTypedRuleContext(lensParser.TipoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(lensParser.ParametrosContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ComandoContext)
            else:
                return self.getTypedRuleContext(lensParser.ComandoContext,i)


        def concat(self):
            return self.getTypedRuleContext(lensParser.ConcatContext,0)


        def getRuleIndex(self):
            return lensParser.RULE_funcaoW

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoW" ):
                listener.enterFuncaoW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoW" ):
                listener.exitFuncaoW(self)




    def funcaoW(self):

        localctx = lensParser.FuncaoWContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcaoW)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(lensParser.T__13)
            self.state = 163
            self.match(lensParser.VAR)
            self.state = 164
            self.match(lensParser.T__3)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 165
                self.parametros()


            self.state = 168
            self.match(lensParser.T__6)
            self.state = 169
            self.match(lensParser.T__7)
            self.state = 170
            self.tipo()
            self.state = 171
            self.match(lensParser.T__8)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147334560542728) != 0):
                self.state = 172
                self.comando()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 178
                self.match(lensParser.T__9)
                self.state = 179
                self.concat()


            self.state = 182
            self.match(lensParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(lensParser.VAR)
            else:
                return self.getToken(lensParser.VAR, i)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.TipoContext)
            else:
                return self.getTypedRuleContext(lensParser.TipoContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = lensParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(lensParser.VAR)
            self.state = 185
            self.match(lensParser.T__4)
            self.state = 186
            self.tipo()
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 187
                self.match(lensParser.T__5)
                self.state = 188
                self.match(lensParser.VAR)
                self.state = 189
                self.match(lensParser.T__4)
                self.state = 190
                self.tipo()
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(lensParser.VAR, 0)

        def exp(self):
            return self.getTypedRuleContext(lensParser.ExpContext,0)


        def getRuleIndex(self):
            return lensParser.RULE_funcaoD

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoD" ):
                listener.enterFuncaoD(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoD" ):
                listener.exitFuncaoD(self)




    def funcaoD(self):

        localctx = lensParser.FuncaoDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcaoD)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(lensParser.VAR)
            self.state = 197
            self.match(lensParser.T__3)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1389782697508880) != 0):
                self.state = 198
                self.exp()


            self.state = 201
            self.match(lensParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifcond(self):
            return self.getTypedRuleContext(lensParser.IfcondContext,0)


        def elifcond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ElifcondContext)
            else:
                return self.getTypedRuleContext(lensParser.ElifcondContext,i)


        def elcond(self):
            return self.getTypedRuleContext(lensParser.ElcondContext,0)


        def getRuleIndex(self):
            return lensParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)




    def condicao(self):

        localctx = lensParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.ifcond()
            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 204
                self.elifcond()
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 210
                self.elcond()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfcondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expcond(self):
            return self.getTypedRuleContext(lensParser.ExpcondContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ComandoContext)
            else:
                return self.getTypedRuleContext(lensParser.ComandoContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_ifcond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfcond" ):
                listener.enterIfcond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfcond" ):
                listener.exitIfcond(self)




    def ifcond(self):

        localctx = lensParser.IfcondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifcond)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self.match(lensParser.T__14)
            self.state = 214
            self.expcond()
            self.state = 215
            self.match(lensParser.T__8)
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147334560542728) != 0):
                self.state = 216
                self.comando()
                self.state = 221
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 222
            self.match(lensParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifcondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expcond(self):
            return self.getTypedRuleContext(lensParser.ExpcondContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ComandoContext)
            else:
                return self.getTypedRuleContext(lensParser.ComandoContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_elifcond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElifcond" ):
                listener.enterElifcond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElifcond" ):
                listener.exitElifcond(self)




    def elifcond(self):

        localctx = lensParser.ElifcondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elifcond)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 224
            self.match(lensParser.T__15)
            self.state = 225
            self.expcond()
            self.state = 226
            self.match(lensParser.T__8)
            self.state = 230
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 147334560542728) != 0):
                self.state = 227
                self.comando()
                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 233
            self.match(lensParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElcondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lensParser.ComandoContext)
            else:
                return self.getTypedRuleContext(lensParser.ComandoContext,i)


        def getRuleIndex(self):
            return lensParser.RULE_elcond
